[package]
name = "uring-executor"
version = "0.1.0"
edition = "2021"
description = "Experimental io_uring-based asynchronous runtime"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5.2"
slab = "0.4.5"
libc = "0.2.108"

snafu = "0.6.10"

once_cell = "1.8.0"
parking_lot = "0.11.2"

static_assertions = "1.1.0"

log = "0.4.14"

crossbeam-deque = "0.8.1"
crossbeam-channel = "0.5.1"

[dev-dependencies]
anyhow = "1.0.49"
env_logger = "0.9.0"
